--- a/css/index-stylesheet.css
+++ b/css/index-stylesheet.css
@@ -25,7 +25,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 35px;
+    margin: 0 0 15px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
@@ -140,7 +140,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../images/intro3.jpg) no-repeat bottom center scroll;
+    background: url(../images/intro1.png) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -251,6 +251,7 @@ a:focus {
 }
 
 .content-section {
+    width: 100%;
     padding-top: 100px;
 }
 
@@ -258,7 +259,7 @@ a:focus {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../images/bg1.jpg) no-repeat center center scroll;
+    background: url(../images/g.png) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
